# autonomous-navigation

./: .gitignore  README.md  Udev_Serial_Links.txt  batch_run.py
OG/auto_navigation/auto_nav/: gps_waypoint_client.py  rover_serial_bridge.py
OG/auto_navigation/config/: nav2_params.yaml  navsat.yaml  wave_rider_tf.yaml
OG/auto_navigation/launch/: nav2_outdoor.launch.py
OG/lidar_testing/: README.md  test_scans.py
OG/pothole_detection/: ai_pothole_detection.py  testin2.py  testing.py
OG/raspi-readme/: README.md
auto_nav/auto_nav/: package.xml  setup.py
auto_nav/auto_nav/config/: nav2_params.yaml
auto_nav/auto_nav/launch/: bringup_rover.launch.py
auto_nav/auto_nav/src/: cmdvel_to_json.py
auto_nav/config/: ekf.yaml
auto_navigation/: Temporary_Readme.txt  package.xml  setup.py
auto_navigation/auto_nav/: gps_imu_to_odom.py  gps_serial_driver.py  gps_waypoint_client.py  imu_serial_driver.py  rover_serial_bridge.py
auto_navigation/auto_nav/deprecated/: cmdvel_to_json.py  gps_serial_driver.py
auto_navigation/auto_nav/urdf/: esp32_robot.urdf
auto_navigation/config/: ekf.yaml  nav2_params.yaml  navsat.yaml  navsat_transform.yaml
auto_navigation/launch/: bringup.launch.py  nav2_outdoor.launch.py  wave_rider_tf.launch.py
autonomous_navigation/: INTEGRATION.md  QUICKSTART.md  README.md  package.xml  setup.cfg  setup.py
autonomous_navigation/autonomous_navigation/: __init__.py  autonomous_navigation.py  autonomous_navigation_fast_avoidance.py  autonomous_navigation_gps.py  autonomous_navigation_with_goal.py  rover_serial_bridge.py  simple_autonomous_navigation.py  simple_waypoint_follower.py
autonomous_navigation/config/: rover_serial_bridge.yaml  waypoint_follower.yaml
autonomous_navigation/launch/: autonomous_navigation.launch.py  autonomous_navigation_fast_avoidance.launch.py  autonomous_navigation_goal.launch.py  autonomous_navigation_gps.launch.py  autonomous_navigation_simple.launch.py  simple_navigation.launch.py
camera_feeds_webrtc/: package.xml  temp.txt
camera_feeds_webrtc/launch/: launch_camera_streams.launch.py
camera_feeds_webrtc/src/: camera_feed.py  webRTC_bridge.py
command_centre/: README.md  package.xml  setup.cfg  setup.py
command_centre/command_centre/: __init__.py  rover_command_center.py  rover_command_centre.py
command_centre/launch/: autonomous_nav.launch.py  command_centre.launch.py
csi_camera_stream/: README.md  package.xml  setup.cfg  setup.py
csi_camera_stream/csi_camera_stream/: TestSubscriber.py  best_fastest_camera.py  cam_test.py  csi_camera_inference.py  csi_camera_video.py  csi_camera_video_2.py  usb_camera_video.py  usb_webRTC_publisher.py  webRTC_publisher.py  webRTC_publisher_2.py
csi_camera_stream/launch/: csi_camera_stream.launch.py  csi_camera_stream_2.launch.py  launch_camera_streams.launch.py  usb_camera_stream.launch.py
csi_camera_stream/src/: cam_test.py  csi_camera_inference.py  csi_camera_snapshot.py  csi_camera_video.py  webRTC_publisher.py
csi_camera_stream_/: package.xml
csi_camera_stream_/launch/: launch_camera_streams.launch.py
lidar_testing/: test_scans.py
nmea_navsat_driver-ros2/: README.md  map.html
nmea_navsat_driver-ros2/config/: nmea_serial_driver.yaml
nmea_navsat_driver-ros2/src/libnmea_navsat_driver/nodes/: nmea_serial_driver.py  nmea_topic_serial_reader.py
obstacle_detection/: README.md  package.xml  setup.py
obstacle_detection/config/: nmea_serial_driver.yaml  obstacle_detector_params.yaml
obstacle_detection/launch/: main.launch.py  obstacle_detector.launch copy.py  obstacle_detector.launch.py
obstacle_detection/obstacle_detection/: obstacle_detector.py
pothole_detection/: ai_pothole_detection.py  testin2.py
raspi-readme/: README.md
rplidar_ros/launch/: rplidar_a2m8_launch.py
src/obstacle_detection/launch/: obstacle_detector.launch.py
wave_rover_description/: CMakeLists.txt  package.xml
wave_rover_description/launch/: display.launch.py
wave_rover_description/urdf/: wave_rover.urdf
wave_rover_serial_control/: To use.txt  package.xml  setup.cfg  setup.py
wave_rover_serial_control/potrider/: battery_check.py  serial_motor_node.py  wasd_control.py
