<?xml version="1.0"?>
<package format="2">
  <name>pi_camera_webrtc</name>
  <version>0.0.1</version>
  <description>ROS package for streaming CSI camera to WebRTC</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>raspicam_node</exec_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>