<?xml version="1.0"?>
<package format="2">
  <name>pi_camera_webrtc</name>
  <version>0.0.1</version>
  <description>ROS package for streaming CSI camera to WebRTC with object detection</description>
  
  <maintainer email="bytesizedrobotics0@gmail.com">Admin Byte</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>raspicam_node</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  
  <!-- Additional dependencies for YOLOv5 object detection -->
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-torchvision</exec_depend>
  
  <!-- The WebRTC and YOLOv5 dependencies will need to be installed via pip 
  TODO: NATHAN MAKE SURE THESE ARE INSTALLED ON MACHINE -->
  <export>
    <pip_requirements>
      aiortc>=1.3.2
      websockets>=10.0
      av>=10.0.0
      torch>=1.8.0
      torchvision>=0.9.0
      ultralytics>=8.0.0
    </pip_requirements>
  </export>
</package>