<?xml version="1.0"?>
<package format="3">
  <name>wave_rover_description</name>
  <version>0.0.1</version>
  <description>URDF for Waveshare WaveRover + sensors</description>
  <maintainer email="lmarl090@uottawa.ca">Louis Marleau</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
</package>

